--- a/MobeenApplication/ar.lproj/Localizable.strings
+++ b/MobeenApplication/ar.lproj/Localizable.strings
@@ -58,6 +58,34 @@
 "pay" = "الدفع";
 "Text translation" = "ترجمة نص";
 "Cancel" = "إلغاء";
+"Send Request" = "إرسال الطلب";
+"Good" = "جيد";
+"   Hello" = "مرحبا";
+"Mohammed" = "محمد";
+"His work is great and very accurate." = "عمله رائع ودقيق جداً";
+"Noura Saad" = "نورة سعد";
+"Sara" = "سارة";
+"Great work." = "عمل جيد";
+"Translator and Editor (English - Arabic) Bachelor’s Degree - Language and Translation" = "مترجم ومحرر (إنجليزي - عربي) بكالوريوس - لغات وترجمة";
+"King Saud University" = "جامعة الملك سعود";
+"Riyadh, Saudi Arabia" = "الرياض، المملكة العربية السعودية";
+"Qualifications" = "المؤهلات";
+"4.84" = "٤.٨٤";
+"posted this.2w" = "نُشر منذ اسبوعين";
+"Review" = "تقييم المستخدمين";
+"Text Details" = "تفاصيل النص";
+"Date" = "التاريخ";
+"Service Type" = "نوع الخدمة";
+"Text Translation" = "ترجمة نص";
+"Text Conversion" = "تحويل نص";
+"Convert an informal text into a formal text" = "تحويل نص من الصيغة العامة الى نص منظم ورسمي";
+"Additional Notes" = "ملاحظات إضافية";
+
+
+
+
+
+
 
 
 
