--- a/MobeenApplication/ar.lproj/Localizable.strings
+++ b/MobeenApplication/ar.lproj/Localizable.strings
@@ -80,7 +80,8 @@
 "Text Conversion" = "تحويل نص";
 "Convert an informal text into a formal text" = "تحويل نص من الصيغة العامة الى نص منظم ورسمي";
 "Additional Notes" = "ملاحظات إضافية";
-
+"Your Request was Sent Successfully" = "تم إرسال طلبك بنجاح";
+"Done" = "تم";
 
 
 
