done button works + localized the speech recorder

--- a/MobeenApplication/ar.lproj/Localizable.strings
+++ b/MobeenApplication/ar.lproj/Localizable.strings
@@ -82,7 +82,8 @@
 "Additional Notes" = "ملاحظات إضافية";
 "Your Request was Sent Successfully" = "تم إرسال طلبك بنجاح";
 "Done" = "تم";
-
+"en-US" = "ar-SA";
+"Say something, I'm listening!" = "تحدث، أنا أستمع";
 
 
 
